--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^www\.
+
+# Redirect www to non-www and force HTTPS
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://pcgames.com.de/$1 [R=301,L]
+
+# Force HTTPS for all (including non-www)
+RewriteCond %{HTTPS} off
+RewriteCond %{HTTP_HOST} ^pcgames\.com\.de$ [NC]
 RewriteRule ^(.*)$ https://pcgames.com.de/$1 [R=301,L]
